# Test setup.cfg file for dependency confusion detection
# This file uses the declarative configuration format for setuptools

[metadata]
name = dependency-confusion-setup-cfg-test
version = 2.1.0
author = Security Research Team
author_email = security-research@testcompany.com
description = Comprehensive test setup.cfg for dependency confusion scanning
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/testorg/dependency-confusion-setup-cfg-test
project_urls = 
    Documentation = https://docs.testcompany.com/setup-cfg-test
    Source Code = https://github.com/testorg/dependency-confusion-setup-cfg-test
    Bug Tracker = https://github.com/testorg/dependency-confusion-setup-cfg-test/issues
    # Potentially hijackable URLs (should trigger GitHub repo hijacking detection)
    Legacy Project = https://github.com/old-company/legacy-project
    Archived Tools = https://github.com/defunct-startup/archived-tools
    Internal Docs = https://github.com/missing-org/internal-documentation

classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Security

keywords = dependency-confusion, security-testing, vulnerability-detection

[options]
zip_safe = False
packages = find:
package_dir =
    = src
python_requires = >=3.8
include_package_data = True

# Core runtime dependencies - mix of legitimate and suspicious packages
install_requires =
    # Standard legitimate packages
    requests>=2.28.0
    urllib3>=1.26.0
    certifi>=2022.6.15
    chardet>=5.0.0
    idna>=3.3
    click>=8.1.0
    colorama>=0.4.5
    
    # JSON and data processing
    jsonschema>=4.6.0
    pyyaml>=6.0
    toml>=0.10.2
    
    # Suspicious internal packages (should be flagged for dependency confusion)
    internal-api-gateway>=3.4.2
    company-authentication-service==2.8.1
    private-database-connector>=4.1.7
    org-message-broker==1.9.3
    enterprise-config-manager>=2.6.8
    custom-serialization-lib==3.2.5
    internal-cache-provider>=1.7.4
    company-audit-logger==4.3.1
    private-encryption-service>=2.4.9
    org-workflow-orchestrator==1.8.6
    enterprise-monitoring-client>=3.1.2
    custom-validation-engine==2.7.3
    internal-storage-adapter>=1.5.8
    company-notification-hub==3.6.4
    private-analytics-collector>=2.2.7

# Setup/build time dependencies
setup_requires =
    setuptools>=65.0.0
    wheel>=0.37.0
    setuptools_scm>=7.0.0
    
    # Suspicious setup dependencies (should be flagged)
    internal-build-orchestrator>=2.3.1
    company-asset-compiler==1.6.9
    private-proto-generator>=3.4.5
    org-dependency-resolver==2.1.4
    enterprise-build-validator>=1.8.7

# Test dependencies  
tests_require =
    pytest>=7.1.0
    pytest-cov>=3.0.0
    pytest-mock>=3.8.0
    pytest-xdist>=2.5.0
    pytest-timeout>=2.1.0
    coverage>=6.4.0
    tox>=3.25.0
    
    # Suspicious test dependencies (should be flagged)
    internal-test-orchestrator>=4.2.3
    company-mock-factory==2.9.1
    private-test-data-generator>=1.7.8
    org-integration-test-runner==3.5.2
    enterprise-performance-profiler>=2.4.6
    custom-test-fixtures==1.9.4
    internal-database-seeder>=3.1.7
    company-load-test-generator==2.6.9
    private-chaos-engineering>=1.4.3

[options.packages.find]
where = src
exclude = 
    tests*
    docs*

[options.package_data]
dependency_test = 
    config/*.yaml
    config/*.json
    templates/*.jinja2
    static/**/*
    schemas/*.json

[options.entry_points]
console_scripts =
    dep-cfg-test = dependency_test.cli:main
    security-cfg-scan = dependency_test.scanner:run_scan
    config-validator = dependency_test.validator:validate

[options.extras_require]
# Development environment dependencies
dev = 
    black>=22.6.0
    flake8>=5.0.0
    isort>=5.10.0
    mypy>=0.971
    pre-commit>=2.20.0
    bandit>=1.7.0
    safety>=2.1.0
    
    # Suspicious dev dependencies (should be flagged)
    internal-dev-environment>=3.7.2
    company-debug-profiler==2.4.8
    private-code-formatter>=1.6.5
    org-dev-proxy-server==4.1.3
    enterprise-local-simulator>=2.9.7
    custom-linting-rules==1.8.2
    internal-dev-database>=3.2.9
    company-hot-reload-server==2.5.4

# Production environment dependencies
production =
    gunicorn>=20.1.0
    uvicorn[standard]>=0.18.0
    gevent>=22.8.0
    eventlet>=0.33.0
    prometheus-client>=0.14.1
    statsd>=3.3.0
    
    # Suspicious production dependencies (should be flagged)
    internal-load-balancer-client>=5.3.1
    company-circuit-breaker==3.8.4
    private-service-mesh-adapter>=2.7.6
    org-distributed-tracing>=4.2.9
    enterprise-secrets-manager==1.9.5
    custom-health-check-engine>=3.4.8
    internal-deployment-orchestrator>=2.6.3
    company-auto-scaler==4.1.7
    private-canary-deployment>=1.8.2

# Database and storage dependencies
database =
    sqlalchemy>=1.4.0
    alembic>=1.8.0
    psycopg2-binary>=2.9.0
    pymongo>=4.2.0
    redis>=4.3.0
    elasticsearch>=8.3.0
    
    # Suspicious database dependencies (should be flagged)
    internal-orm-extensions>=2.5.4
    company-database-sharding==3.1.8
    private-connection-pooler>=4.6.2
    org-query-optimizer==1.7.9
    enterprise-db-migration-tool>=2.8.5
    custom-caching-layer==3.3.7
    internal-backup-scheduler>=1.9.6
    company-data-archiver==2.4.3

# Machine learning and analytics dependencies
ml =
    numpy>=1.21.0
    pandas>=1.4.0
    scikit-learn>=1.1.0
    matplotlib>=3.5.0
    seaborn>=0.11.0
    jupyter>=1.0.0
    
    # Suspicious ML dependencies (should be flagged) 
    internal-feature-store-client>=4.8.3
    company-model-training-platform==2.9.7
    private-ml-experiment-tracker>=3.5.1
    org-data-pipeline-orchestrator==1.6.8
    enterprise-model-serving-engine>=2.7.4
    custom-feature-engineering>=4.2.9
    internal-anomaly-detector==1.8.5
    company-ml-monitoring>=3.4.2
    private-auto-ml-framework==2.1.6

# Web and API dependencies
web =
    flask>=2.1.0
    django>=4.1.0
    fastapi>=0.85.0
    starlette>=0.20.0
    aiohttp>=3.8.0
    tornado>=6.2.0
    
    # Suspicious web dependencies (should be flagged)
    internal-api-gateway-client>=3.9.2
    company-auth-middleware==2.6.5
    private-rate-limiter>=1.7.8
    org-request-validator==4.3.1
    enterprise-api-versioning>=2.8.4
    custom-cors-handler==1.5.7
    internal-session-manager>=3.2.6
    company-webhook-processor==2.9.3

# Documentation dependencies
docs =
    sphinx>=5.0.0
    sphinx-rtd-theme>=1.0.0
    sphinx-autodoc-typehints>=1.19.0
    myst-parser>=0.18.0
    
    # Suspicious documentation dependencies (should be flagged)
    internal-doc-generator>=2.4.7
    company-api-doc-builder==1.8.3
    private-changelog-generator>=3.1.5
    org-style-guide-enforcer==2.7.2

# Security and compliance dependencies
security =
    cryptography>=37.0.0
    pyjwt>=2.4.0
    bcrypt>=3.2.0
    passlib>=1.7.0
    
    # Suspicious security dependencies (should be flagged)
    internal-security-
